[package]
name = "jostle"
description = "Simple, constrained 2D physics library for Bevy optimized for large crowds of units"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = ["bevy_log", "std"] }
smallvec = "1.15.1"

[dev-dependencies]
approx = "0.5.1"
