[package]
name = "jostle"
description = "Simple, constrained 2D physics library for Bevy optimized for large crowds of units"
license = "MIT"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "bench"
harness = false
required-features = ["diagnostic"]

[features]
diagnostic = []

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = ["libm"] }
smallvec = "1.15.1"

[dev-dependencies]
approx = "0.5.1"
bevy = { version = "0.17.2", default-features = false, features = [
  "bevy_log",
  "bevy_sprite_render",
  "bevy_winit",
] }
bevy_math = { version = "0.17.2", default-features = false, features = [
  "approx", "libm"
] }
criterion = "0.7.0"
rand = "0.9.2"
